--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body bg-light">Frontend developer with experience in HTML, CSS, JavaScript and React.</div>
+                    <div class="accordion-body bg-light">Frontend developer with a knack for building engaging digital interfaces. Skilled in HTML, CSS, JavaScript, and React. Enjoys collaborating with design and backend teams to create user-friendly experiences. Always eager to learn and adapt to new technologies in web development.</div>
                   </div>
                 </div>
                 <div class="accordion-item bg-transparent">
@@ -54,7 +54,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-4">
                             <div class="col">
                               <div class="card">
-                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><img src="/images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></a>
+                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><div class="project-image-container"><img src="/images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></div></a>
                                 <div class="card-body">
                                   <h5 class="card-title">Freelance Translator Website</h5>
                                   <p class="card-text">Since I'm also a translator, I made my own website. I used HTML, CSS and Javascript.</p>
@@ -63,7 +63,7 @@
                             </div>
                             <div class="col">
                               <div class="card">
-                                <img src="/images/cards/TranslatorWebsite.png" class="card-img-top" alt="...">
+                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><div class="project-image-container"><img src="/images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></div></a>
                                 <div class="card-body">
                                   <h5 class="card-title">Card title</h5>
                                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -72,7 +72,7 @@
                             </div>
                             <div class="col">
                               <div class="card">
-                                <img src="/images/cards/TranslatorWebsite.png" class="card-img-top" alt="...">
+                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><div class="project-image-container"><img src="/images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></div></a>
                                 <div class="card-body">
                                   <h5 class="card-title">Card title</h5>
                                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -81,7 +81,7 @@
                             </div>
                             <div class="col">
                               <div class="card">
-                                <img src="/images/cards/TranslatorWebsite.png" class="card-img-top" alt="...">
+                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><div class="project-image-container"><img src="/images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></div></a>
                                 <div class="card-body">
                                   <h5 class="card-title">Card title</h5>
                                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
