--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <section class="hero">
         <div class="main-container">
             <div class="animated-text-container">
-                <span class="animated-text-1 play-bold">adaviladev</span>
-                <span class="animated-text-2 play-regular">Frontend Developer</span>
+                <span class="animated-text-1 play-bold">adaviladev</span><br>
+                <span class="animated-text-2 play-regular">Frontend</span>
+                <span class="animated-text-2 play-regular">Developer</span>
             </div>
             <div class="tech-icons">
                 <i class="fa-brands fa-html5"></i>
@@ -39,7 +40,12 @@
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body bg-light">Frontend developer with a knack for building engaging digital interfaces. Skilled in HTML, CSS, JavaScript, and React. Enjoys collaborating with design and backend teams to create user-friendly experiences. Always eager to learn and adapt to new technologies in web development.</div>
+                    <div class="accordion-body bg-light">
+                      <p>Hi! My name is Álvaro Dávila and I'm a Frontend developer and I enjoy building engaging digital interfaces.</p>
+                      <p>I'm skilled in HTML, CSS, JavaScript, and React.</p> 
+                      <p>Enjoys collaborating with design and backend teams to create user-friendly experiences.</p>
+                      <p>Always eager to learn and adapt to new technologies in web development.</p>
+                    </div>
                   </div>
                 </div>
                 <div class="accordion-item bg-transparent">
@@ -48,9 +54,9 @@
                       Projects
                     </button>
                   </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse " data-bs-parent="#accordionFlushExample">
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body bg-light">
-                        <p >This is a selection of projects I have been working during the past year.</p>
+                        <p >This is a selection of projects I have been working during the past year.</p><br>
                         <div class="row row-cols-1 row-cols-md-2 g-4">
                             <div class="col">
                               <div class="card">
@@ -105,7 +111,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+            </div>
         </div>
     </section>
 <!-- Bootstrap -->
