--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item bg-transparent">
                   <h2 class="accordion-header">
-                    <button class="accordion-button collapsed bg-transparent text-light d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                       About
                     </button>
                   </h2>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="accordion-item bg-transparent">
                   <h2 class="accordion-header">
-                    <button class="accordion-button collapsed bg-transparent text-light d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                       Projects
                     </button>
                   </h2>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="accordion-item bg-transparent">
                   <h2 class="accordion-header">
-                    <button class="accordion-button collapsed bg-transparent text-light d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                       Contact
                     </button>
                   </h2>
