--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <section class="hero">
         <div class="main-container">
             <div class="animated-text-container">
-                <span class="animated-text-1 play-bold">adaviladev</span><br>
-                <span class="animated-text-2 play-regular">Frontend</span>
-                <span class="animated-text-2 play-regular">Developer</span>
+                <span class="animated-text-1 play-bold">Álvaro Dávila</span><br>
+                <span class="animated-text-2 play-regular">Frontend Developer</span>
             </div>
             <div class="tech-icons">
                 <i class="fa-brands fa-html5"></i>
@@ -105,7 +104,7 @@
                     </button>
                   </h2>
                   <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body bg-light">
+                    <div class="accordion-body contact">
                         <p>+569 8183 8598</p>
                         <p>alvarodaviladev@gmail.com</p>
                     </div>
