--- a/index.html
+++ b/index.html
@@ -2,119 +2,157 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adaviladev's Portfolio Page</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/877d51e80c.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Adaviladev's Portfolio Page</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/877d51e80c.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 
 <body>
 
-    <section class="hero">
-        <div class="main-container">
-            <div class="animated-text-container">
-                <span class="animated-text-1 play-bold">Álvaro Dávila</span><br>
-                <span class="animated-text-2 play-regular">Frontend Developer</span>
+  <section class="hero">
+    <div class="position-absolute top-0 end-0 text-light m-3">Social
+      <a class="text-decoration-none text-reset" href="https://github.com/adaviladev" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a class="text-decoration-none text-reset href="https://www.linkedin.com/in/alvarodavilapinto/" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a class="text-decoration-none text-reset" href="https://www.instagram.com/alvarodavila87/" target="_blank">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+
+    </div>
+    <div class="main-container">
+      <div class="animated-text-container">
+        <span class="animated-text-1 play-bold">Álvaro Dávila</span><br>
+        <span class="animated-text-2 play-regular">Frontend Developer</span>
+      </div>
+      <div class="tech-icons">
+        <i class="fa-brands fa-html5"></i>
+        <i class="fa-brands fa-css3-alt"></i>
+        <i class="fa-brands fa-js"></i>
+        <i class="fa-brands fa-react"></i>
+        <i class="fa-brands fa-bootstrap"></i>
+        <i class="fa-brands fa-sass"></i>
+      </div>
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item bg-transparent">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button"
+              data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
+              aria-controls="flush-collapseOne">
+              About
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body bg-light">
+              <p>Hi! My name is Álvaro Dávila and I'm a Frontend developer and I enjoy building engaging digital
+                interfaces.</p>
+              <p>I'm skilled in HTML, CSS, JavaScript, and React.</p>
+              <p>Enjoys collaborating with design and backend teams to create user-friendly experiences.</p>
+              <p>Always eager to learn and adapt to new technologies in web development.</p>
             </div>
-            <div class="tech-icons">
-                <i class="fa-brands fa-html5"></i>
-                <i class="fa-brands fa-css3-alt"></i>
-                <i class="fa-brands fa-js"></i>
-                <i class="fa-brands fa-react"></i>
-                <i class="fa-brands fa-bootstrap"></i>
-                <i class="fa-brands fa-sass"></i>
-            </div>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item bg-transparent">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      About
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body bg-light">
-                      <p>Hi! My name is Álvaro Dávila and I'm a Frontend developer and I enjoy building engaging digital interfaces.</p>
-                      <p>I'm skilled in HTML, CSS, JavaScript, and React.</p> 
-                      <p>Enjoys collaborating with design and backend teams to create user-friendly experiences.</p>
-                      <p>Always eager to learn and adapt to new technologies in web development.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item bg-transparent">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      Projects
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body bg-light">
-                        <p >This is a selection of projects I have been working during the past year.</p><br>
-                        <div class="row row-cols-1 row-cols-md-2 g-4">
-                            <div class="col">
-                              <div class="card">
-                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><div class="project-image-container"><img src="images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></div></a>
-                                <div class="card-body">
-                                  <h5 class="card-title">Freelance Translator Website</h5>
-                                  <p class="card-text">Since I'm also a translator, I made my own website. I used HTML, CSS and Javascript.</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col">
-                              <div class="card">
-                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><div class="project-image-container"><img src="images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></div></a>
-                                <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col">
-                              <div class="card">
-                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><div class="project-image-container"><img src="images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></div></a>
-                                <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col">
-                              <div class="card">
-                                <a href="https://adaviladev.github.io/adavilatr/" target="_blank"><div class="project-image-container"><img src="images/cards/TranslatorWebsite.png" class="card-img-top" alt="..."></div></a>
-                                <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                              </div>
-                            </div>
-                        </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item bg-transparent">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                      Contact
-                    </button>
-                  </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body contact">
-                        <p>+569 8183 8598</p>
-                        <p>alvarodaviladev@gmail.com</p>
-                    </div>
-                  </div>
-                </div>
-            </div>
+          </div>
         </div>
-    </section>
-<!-- Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <div class="accordion-item bg-transparent">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button"
+              data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
+              aria-controls="flush-collapseTwo">
+              Projects
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body bg-light">
+              <p>This is a selection of projects I have been working during the past year.</p><br>
+              <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                  <div class="card">
+                    <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
+                      <div class="project-image-container"><img src="images/cards/TranslatorWebsite.png"
+                          class="card-img-top" alt="..."></div>
+                    </a>
+                    <div class="card-body">
+                      <h5 class="card-title">Freelance Translator Website</h5>
+                      <p class="card-text">Since I'm also a translator, I made my own website. I used HTML, CSS and
+                        Javascript.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
+                      <div class="project-image-container"><img src="images/cards/TranslatorWebsite.png"
+                          class="card-img-top" alt="..."></div>
+                    </a>
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
+                      <div class="project-image-container"><img src="images/cards/TranslatorWebsite.png"
+                          class="card-img-top" alt="..."></div>
+                    </a>
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
+                      <div class="project-image-container"><img src="images/cards/TranslatorWebsite.png"
+                          class="card-img-top" alt="..."></div>
+                    </a>
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item bg-transparent">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button"
+              data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false"
+              aria-controls="flush-collapseThree">
+              Contact
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body contact">
+              <p>+569 8183 8598</p>
+              <p>alvarodaviladev@gmail.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
