--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body>
 
   <section class="hero">
-    <div class="position-absolute top-0 end-0 text-light m-3">Social
+    <div style="height: 175px;" class="social position-absolute top-0 text-light pt-2">Social
       <a class="text-decoration-none text-reset" href="https://github.com/adaviladev" target="_blank">
-        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-github m-2"></i>
       </a>
-      <a class="text-decoration-none text-reset href="https://www.linkedin.com/in/alvarodavilapinto/" target="_blank">
-        <i class="fa-brands fa-linkedin"></i>
+      <a class="text-decoration-none text-reset" href="https://www.linkedin.com/in/alvarodavilapinto/" target="_blank">
+        <i class="fa-brands fa-linkedin m-2"></i>
       </a>
       <a class="text-decoration-none text-reset" href="https://www.instagram.com/alvarodavila87/" target="_blank">
-        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-instagram m-2"></i>
       </a>
 
     </div>
@@ -40,8 +40,8 @@
         <i class="fa-brands fa-html5"></i>
         <i class="fa-brands fa-css3-alt"></i>
         <i class="fa-brands fa-js"></i>
-        <i class="fa-brands fa-react"></i>
         <i class="fa-brands fa-bootstrap"></i>
+        <i class="fa-brands fa-react"></i>
         <i class="fa-brands fa-sass"></i>
       </div>
       <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -54,7 +54,7 @@
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body bg-light">
+            <div class="accordion-body border border-secondary-subtle text-white">
               <p>Hi! My name is Álvaro Dávila and I'm a Frontend developer and I enjoy building engaging digital
                 interfaces.</p>
               <p>I'm skilled in HTML, CSS, JavaScript, and React.</p>
@@ -72,7 +72,7 @@
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body bg-light">
+            <div class="accordion-body border border-secondary-subtle text-white">
               <p>This is a selection of projects I have been working during the past year.</p><br>
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
@@ -140,9 +140,9 @@
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body contact">
-              <p>+569 8183 8598</p>
-              <p>alvarodaviladev@gmail.com</p>
+            <div class="accordion-body border border-secondary-subtle text-white contact">
+              <div class="contact-icons"><i class="m-2 fa-brands fa-square-whatsapp"></i><p>+569 8183 8598</p></div>
+              <div class="contact-icons"><i class="m-2 fa-solid fa-envelope"></i><p>alvarodaviladev@gmail.com</p></div>
             </div>
           </div>
         </div>
