--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adaviladev's Portfolio Page</title>
+  <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Icons -->
   <script src="https://kit.fontawesome.com/877d51e80c.js" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 
 <body>
-
+  <!-- Hero Section -->
   <section class="hero">
-    <div style="height: 175px;" class="social position-absolute top-0 text-light pt-2">Social
+    <div style="height: 175px;" class="social position-absolute top-0 text-light pt-3">Social
       <a class="text-decoration-none text-reset" href="https://github.com/adaviladev" target="_blank">
         <i class="fa-brands fa-github m-2"></i>
       </a>
@@ -32,9 +34,9 @@
 
     </div>
     <div class="main-container">
-      <div class="animated-text-container">
-        <span class="animated-text-1 play-bold">Álvaro Dávila</span><br>
-        <span class="animated-text-2 play-regular">Frontend Developer</span>
+      <div class="name-title-container">
+        <h1 class="play-bold">Álvaro Dávila</h1><br>
+        <h2 class="play-regular">Frontend Developer</h2>
       </div>
       <div class="tech-icons">
         <i class="fa-brands fa-html5"></i>
@@ -45,7 +47,7 @@
         <i class="fa-brands fa-sass"></i>
       </div>
       <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item bg-transparent">
+        <div class="accordion-item bg-transparent about">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button"
               data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
@@ -63,7 +65,8 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item bg-transparent">
+        <!-- Projects Accordion Menu -->
+        <div class="accordion-item bg-transparent projects">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button"
               data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
@@ -73,8 +76,10 @@
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body border border-secondary-subtle text-white">
-              <p>This is a selection of projects I have been working during the past year.</p><br>
+              <p>This is a selection of projects I have been working recently.</p><br>
+              <!-- Projects wrapper -->
               <div class="row row-cols-1 row-cols-md-2 g-4">
+                <!-- Project 1 Card -->
                 <div class="col">
                   <div class="card">
                     <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
@@ -83,51 +88,33 @@
                     </a>
                     <div class="card-body">
                       <h5 class="card-title">Freelance Translator Website</h5>
-                      <p class="card-text">Since I'm also a translator, I made my own website. I used HTML, CSS and
-                        Javascript.</p>
+                      <p class="card-text">Professional Translator Website using HTML, CSS and JavaScript</p>
+                      <a href="https://github.com/adaviladev/adavilatr" target="_blank">Ver en GitHub</a>
+                      <a href="https://adaviladev.github.io/adavilatr/" target="_blank">Ver en Vivo</a>
                     </div>
                   </div>
                 </div>
+                <!-- Project 2 Card -->
                 <div class="col">
                   <div class="card">
                     <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
-                      <div class="project-image-container"><img src="images/cards/TranslatorWebsite.png"
+                      <div class="project-image-container"><img src="images/cards/Todo.png"
                           class="card-img-top" alt="..."></div>
                     </a>
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">Todo List</h5>
+                      <p class="card-text">Simple, yet functional To Do App made with HTML, CSS and JavaScript</p>
+                      <a href="https://github.com/adaviladev/pf-task-manager" target="_blank">Ver en GitHub</a>
+                      <a href="https://codepen.io/adaviladev/full/abgzKbG" target="_blank">Ver en Vivo</a>
                     </div>
                   </div>
                 </div>
-                <div class="col">
-                  <div class="card">
-                    <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
-                      <div class="project-image-container"><img src="images/cards/TranslatorWebsite.png"
-                          class="card-img-top" alt="..."></div>
-                    </a>
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
-                      <div class="project-image-container"><img src="images/cards/TranslatorWebsite.png"
-                          class="card-img-top" alt="..."></div>
-                    </a>
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
-                </div>
+                <!-- Project 3 Card -->
+                 <!-- Project 4 Card -->
+                  <!-- Project 5 Card -->
+                   <!-- Project 6 Card -->
               </div>
+              <!-- End of Projects Wrapper -->
             </div>
           </div>
         </div>
@@ -141,8 +128,12 @@
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body border border-secondary-subtle text-white contact">
-              <div class="contact-icons"><i class="m-2 fa-brands fa-square-whatsapp"></i><p>+569 8183 8598</p></div>
-              <div class="contact-icons"><i class="m-2 fa-solid fa-envelope"></i><p>alvarodaviladev@gmail.com</p></div>
+              <div class="contact-icons"><i class="m-2 fa-brands fa-square-whatsapp"></i>
+                <p>+569 8183 8598</p>
+              </div>
+              <div class="contact-icons"><i class="m-2 fa-solid fa-envelope"></i>
+                <p>alvarodaviladev@gmail.com</p>
+              </div>
             </div>
           </div>
         </div>
