--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <!-- Project 2 Card -->
                 <div class="col">
                   <div class="card">
-                    <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
+                    <a href="https://codepen.io/adaviladev/full/abgzKbG" target="_blank">
                       <div class="project-image-container"><img src="images/cards/Todo.png"
                           class="card-img-top" alt="..."></div>
                     </a>
@@ -110,6 +110,20 @@
                   </div>
                 </div>
                 <!-- Project 3 Card -->
+                <div class="col">
+                  <div class="card">
+                    <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
+                      <div class="project-image-container"><img src="images/cards/geolocalización.png"
+                          class="card-img-top" alt="..."></div>
+                    </a>
+                    <div class="card-body">
+                      <h5 class="card-title">Geolocalizador IP</h5>
+                      <p class="card-text">Esta aplicación realiza una solicitud a un servicio de geolocalización para obtener información de ubicación basada en una dirección IP proporcionada.</p>
+                      <a href="https://github.com/adaviladev/pf-API-data-show" target="_blank">Ver en GitHub</a>
+                      <a href="https://majestic-selkie-439088.netlify.app" target="_blank">Ver en Vivo</a>
+                    </div>
+                  </div>
+                </div>
                  <!-- Project 4 Card -->
                   <!-- Project 5 Card -->
                    <!-- Project 6 Card -->
