--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                 <div class="col">
                   <div class="card">
                     <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
-                      <div class="project-image-container"><img src="images/cards/TranslatorWebsite.png"
+                      <div class="project-image-container"><img src="images/cards/translatorwebsite.png"
                           class="card-img-top" alt="..."></div>
                     </a>
                     <div class="card-body">
-                      <h5 class="card-title">Freelance Translator Website</h5>
+                      <h5 class="card-title">Translator Website</h5>
                       <p class="card-text">Professional Translator Website using HTML, CSS and JavaScript</p>
                       <a href="https://github.com/adaviladev/adavilatr" target="_blank">Ver en GitHub</a>
                       <a href="https://adaviladev.github.io/adavilatr/" target="_blank">Ver en Vivo</a>
@@ -118,7 +118,7 @@
                     </a>
                     <div class="card-body">
                       <h5 class="card-title">Geolocalizador IP</h5>
-                      <p class="card-text">Esta aplicación realiza una solicitud a un servicio de geolocalización para obtener información de ubicación basada en una dirección IP proporcionada.</p>
+                      <p class="card-text">This application makes a request to a geolocation service to obtain location information based on a provided IP address.</p>
                       <a href="https://github.com/adaviladev/pf-API-data-show" target="_blank">Ver en GitHub</a>
                       <a href="https://majestic-selkie-439088.netlify.app" target="_blank">Ver en Vivo</a>
                     </div>
