--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                       <h5 class="card-title">Geolocalizador IP</h5>
                       <p class="card-text">This application makes a request to a geolocation service to obtain location information based on a provided IP address.</p>
                       <a href="https://github.com/adaviladev/pf-API-data-show" target="_blank">Ver en GitHub</a>
-                      <a href="https://majestic-selkie-439088.netlify.app" target="_blank">Ver en Vivo</a>
+                      <a href="https://majestic-selkie-439088.netlify.app/" target="_blank">Ver en Vivo</a>
                     </div>
                   </div>
                 </div>
