--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </a>
                     <div class="card-body">
                       <h5 class="card-title">Translator Website</h5>
-                      <p class="card-text">Professional Translator Website using HTML, CSS and JavaScript</p>
+                      <p class="card-text">Álvaro Dávila's website showcases professional translation services in English, Japanese, Portuguese, and Spanish, complemented by rotating testimonials and an interactive blog navigation.</p>
                       <a href="https://github.com/adaviladev/adavilatr" target="_blank">Ver en GitHub</a>
                       <a href="https://adaviladev.github.io/adavilatr/" target="_blank">Ver en Vivo</a>
                     </div>
@@ -103,7 +103,7 @@
                     </a>
                     <div class="card-body">
                       <h5 class="card-title">Todo List</h5>
-                      <p class="card-text">Simple, yet functional To Do App made with HTML, CSS and JavaScript</p>
+                      <p class="card-text">This app manages a task list where users can add, edit, mark as completed, delete tasks, and clear completed tasks. It includes local storage integration for persistent data, character limit enforcement, and dynamic UI updates based on user interactions.</p>
                       <a href="https://github.com/adaviladev/pf-task-manager" target="_blank">Ver en GitHub</a>
                       <a href="https://codepen.io/adaviladev/full/abgzKbG" target="_blank">Ver en Vivo</a>
                     </div>
@@ -118,7 +118,7 @@
                     </a>
                     <div class="card-body">
                       <h5 class="card-title">Geolocalizador IP</h5>
-                      <p class="card-text">This application makes a request to a geolocation service to obtain location information based on a provided IP address.</p>
+                      <p class="card-text">This app fetches geolocation information based on an IP address input by the user. It utilizes the RapidAPI service to retrieve JSON-formatted data including details such as country, city, region, and coordinates. The interface updates dynamically upon submission, displaying the fetched data in a structured format.</p>
                       <a href="https://github.com/adaviladev/pf-API-data-show" target="_blank">Ver en GitHub</a>
                       <a href="https://majestic-selkie-439088.netlify.app/" target="_blank">Ver en Vivo</a>
                     </div>
@@ -133,13 +133,27 @@
                     </a>
                     <div class="card-body">
                       <h5 class="card-title">Markdown to HTML Converter</h5>
-                      <p class="card-text">This app allows you to write Markdown text and convert it to HTML on the go.</p>
+                      <p class="card-text">This app is a Markdown editor built using React and Redux. It allows users to input Markdown text in a textarea, which is then parsed into HTML using the `marked` library and displayed in real-time in a preview pane. Users can see formatted text, including headers, links, code blocks, lists, blockquotes, images, and styled text. The application uses Redux for state management, with actions to update the Markdown content and a connected component to manage the editor's state.</p>
                       <a href="https://codepen.io/adaviladev/full/KKLZOmP" target="_blank">Ver en GitHub</a>
                       <a href="https://codepen.io/adaviladev/full/KKLZOmP" target="_blank">Ver en Vivo</a>
                     </div>
                   </div>
                 </div>
                   <!-- Project 5 Card -->
+                  <div class="col">
+                    <div class="card">
+                      <a href="https://adaviladevs-pokemonsearch.netlify.app/" target="_blank">
+                        <div class="project-image-container"><img src="images/cards/pokemonapp.png"
+                            class="card-img-top" alt="..."></div>
+                      </a>
+                      <div class="card-body">
+                        <h5 class="card-title">Pokémon Search App</h5>
+                        <p class="card-text">This app fetches and displays Pokémon information based on user input or a random selection. It features dynamic updates of Pokémon name, ID, weight, height, sprite, and various stats (HP, attack, defense, special attack, special defense, speed) fetched from the PokeAPI.</p>
+                        <a href="https://github.com/adaviladev/pf-pokemon-search-app" target="_blank">Ver en GitHub</a>
+                        <a href="https://adaviladevs-pokemonsearch.netlify.app/" target="_blank">Ver en Vivo</a>
+                      </div>
+                    </div>
+                  </div>
                    <!-- Project 6 Card -->
               </div>
               <!-- End of Projects Wrapper -->
