--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <!-- Icons -->
   <script src="https://kit.fontawesome.com/877d51e80c.js" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -44,7 +45,7 @@
       </a>
 
     </div>
-    <div class="main-container">
+    <div class="main-container m-4 p-2">
       <div class="name-title-container play-regular">
         <h1>Álvaro Dávila</h1><br>
         <h2>Frontend Developer</h2>
@@ -59,12 +60,8 @@
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white p-4">
-              <p>Hi! My name is Álvaro Dávila and I'm a Frontend developer and I enjoy building engaging digital
-                interfaces.</p>
-              <p>I'm skilled in HTML, CSS, JavaScript, and React.</p>
-              <p>Enjoys collaborating with design and backend teams to create user-friendly experiences.</p>
-              <p>Always eager to learn and adapt to new technologies in web development.</p>
+            <div class="accordion-body text-white p-2">
+              <p>Hi! My name is Álvaro, and I'm a <strong>Frontend Developer</strong> passionate about building engaging digital interfaces. I'm skilled in HTML, CSS, JavaScript, and React (check the <strong>Tech Stack</strong> section for details). I enjoy collaborating with design and backend teams to create user-friendly experiences and am always eager to learn and adapt to new technologies in web development. Feel free to check out my <strong>Projects</strong> section to see some of my work, and visit the <strong>Contact</strong> section to get in touch.</p>
             </div>
           </div>
         </div>
@@ -77,14 +74,16 @@
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white d-flex justify-content-evenly p-4">
+            <div class="accordion-body text-white d-flex justify-content-evenly  p-2">
               <div class="tech-icons">
-                <i class="fa-brands fa-html5"></i>
-                <i class="fa-brands fa-css3-alt"></i>
-                <i class="fa-brands fa-js"></i>
-                <i class="fa-brands fa-bootstrap"></i>
-                <i class="fa-brands fa-react"></i>
-                <i class="fa-brands fa-sass"></i>
+                <i class="fa-brands fa-html5" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML5"></i>
+        <i class="fa-brands fa-css3-alt" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS3"></i>
+        <i class="fa-brands fa-js" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript"></i>
+        <i class="fa-brands fa-bootstrap" data-bs-toggle="tooltip" data-bs-placement="top" title="Bootstrap"></i>
+        <i class="fa-brands fa-react" data-bs-toggle="tooltip" data-bs-placement="top" title="React"></i>
+        <i class="fa-brands fa-sass" data-bs-toggle="tooltip" data-bs-placement="top" title="Sass"></i>
+        <i class="fa-brands fa-git" data-bs-toggle="tooltip" data-bs-placement="top" title="Git"></i>
+        <i class="fa-brands fa-figma" data-bs-toggle="tooltip" data-bs-placement="top" title="Figma"></i>
               </div>
             </div>
           </div>
@@ -98,7 +97,7 @@
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white p-4">
+            <div class="accordion-body text-white  p-2">
               <p>This is a selection of projects I have been working recently.</p><br>
               <!-- Projects wrapper -->
               <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -206,7 +205,7 @@
             </button>
           </h2>
           <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white p-4 contact">
+            <div class="accordion-body text-white p-2 contact">
               <div class="contact-icons"><i class="m-2 fa-brands fa-square-whatsapp"></i>
                 <p>+569 8183 8598</p>
               </div>
