--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body text-white  p-2">
-              <p>This is a selection of projects I have been working recently.</p><br>
+              <p>This is a selection of projects I have been working on recently. Click on the image to visit the live version. You can also explore the repository at the link below each description.</p><br>
               <!-- Projects wrapper -->
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <!-- Project 1 Card -->
@@ -113,8 +113,8 @@
                       <p class="card-text">Álvaro Dávila's website showcases professional translation services in
                         English, Japanese, Portuguese, and Spanish, complemented by rotating testimonials and an
                         interactive blog navigation.</p>
-                      <a href="https://github.com/adaviladev/adavilatr" target="_blank">Ver en GitHub</a>
-                      <a href="https://adaviladev.github.io/adavilatr/" target="_blank">Ver en Vivo</a>
+                      <a href="https://github.com/adaviladev/adavilatr" target="_blank">GitHub repository</a>
+                      <a href="https://adaviladev.github.io/adavilatr/" target="_blank">View live site</a>
                     </div>
                   </div>
                 </div>
@@ -130,8 +130,8 @@
                       <p class="card-text">This app manages a task list where users can add, edit, mark as completed,
                         delete tasks, and clear completed tasks. It includes local storage integration for persistent
                         data, character limit enforcement, and dynamic UI updates based on user interactions.</p>
-                      <a href="https://github.com/adaviladev/pf-task-manager" target="_blank">Ver en GitHub</a>
-                      <a href="https://codepen.io/adaviladev/full/abgzKbG" target="_blank">Ver en Vivo</a>
+                      <a href="https://github.com/adaviladev/pf-task-manager" target="_blank">GitHub repository</a>
+                      <a href="https://codepen.io/adaviladev/full/abgzKbG" target="_blank">View live site</a>
                     </div>
                   </div>
                 </div>
@@ -148,8 +148,8 @@
                         user. It utilizes the RapidAPI service to retrieve JSON-formatted data including details such as
                         country, city, region, and coordinates. The interface updates dynamically upon submission,
                         displaying the fetched data in a structured format.</p>
-                      <a href="https://github.com/adaviladev/pf-API-data-show" target="_blank">Ver en GitHub</a>
-                      <a href="https://majestic-selkie-439088.netlify.app/" target="_blank">Ver en Vivo</a>
+                      <a href="https://github.com/adaviladev/pf-API-data-show" target="_blank">GitHub repository</a>
+                      <a href="https://majestic-selkie-439088.netlify.app/" target="_blank">View live site</a>
                     </div>
                   </div>
                 </div>
@@ -167,8 +167,8 @@
                         displayed in real-time in a preview pane. The application uses Redux for
                         state management, with actions to update the Markdown content and a connected component to
                         manage the editor's state.</p>
-                      <a href="https://codepen.io/adaviladev/full/KKLZOmP" target="_blank">Ver en GitHub</a>
-                      <a href="https://codepen.io/adaviladev/full/KKLZOmP" target="_blank">Ver en Vivo</a>
+                      <a href="https://codepen.io/adaviladev/full/KKLZOmP" target="_blank">GitHub repository</a>
+                      <a href="https://codepen.io/adaviladev/full/KKLZOmP" target="_blank">View live site</a>
                     </div>
                   </div>
                 </div>
@@ -185,8 +185,8 @@
                         random selection. It features dynamic updates of Pokémon name, ID, weight, height, sprite, and
                         various stats (HP, attack, defense, special attack, special defense, speed) fetched from the
                         PokeAPI.</p>
-                      <a href="https://github.com/adaviladev/pf-pokemon-search-app" target="_blank">Ver en GitHub</a>
-                      <a href="https://adaviladevs-pokemonsearch.netlify.app/" target="_blank">Ver en Vivo</a>
+                      <a href="https://github.com/adaviladev/pf-pokemon-search-app" target="_blank">GitHub repository</a>
+                      <a href="https://adaviladevs-pokemonsearch.netlify.app/" target="_blank">View live site</a>
                     </div>
                   </div>
                 </div>
