--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         <i class="fa-brands fa-sass" data-bs-toggle="tooltip" data-bs-placement="top" title="Sass"></i>
         <i class="fa-brands fa-git" data-bs-toggle="tooltip" data-bs-placement="top" title="Git"></i>
         <i class="fa-brands fa-figma" data-bs-toggle="tooltip" data-bs-placement="top" title="Figma"></i>
+        <i class="fa-solid fa-database" data-bs-toggle="tooltip" data-bs-placement="top" title="SQL"></i>
               </div>
             </div>
           </div>
