--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
         <div class="accordion-item bg-transparent contact">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button"
+            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4 mb-2" type="button"
               data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false"
               aria-controls="flush-collapseFour">
               Contact
@@ -207,11 +207,12 @@
           </h2>
           <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body text-white p-2 contact">
-              <div class="contact-icons"><i class="m-2 fa-brands fa-square-whatsapp"></i>
-                <p>+569 8183 8598</p>
+              <div class="contact-icons">
+                <i class="m-2 fa-brands fa-square-whatsapp"></i>
+                <a href="tel:+56981838598">+569 8183 8598</a>
               </div>
-              <div class="contact-icons"><i class="m-2 fa-solid fa-envelope"></i>
-                <p>alvarodaviladev@gmail.com</p>
+              <div class="contact-icons"><i class="m-2 fa-solid fa-envelope"></i>  
+                <a href="mailto:alvarodaviladev@gmail.com">alvarodaviladev@gmail.com</a>
               </div>
             </div>
           </div>
